--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo APP</title>
   </head>
-  <body class="bg-gradient-to-r from-indigo-950 via-slate-400 to-teal-600 ...">
+  <body class="h-screen bg-gradient-to-r from-indigo-950 via-slate-400 to-teal-600 ...">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
